# linear_regression_model

./: .gitignore  README.md  multivariate.ipynb  render.yaml
summative/: pyproject.toml
summative/API/: prediction.py  requirements.txt
summative/API/model/: best_model.pkl
summative/FlutterApp/: README.md  analysis_options.yaml  pubspec.yaml
summative/FlutterApp/android/app/: build.gradle.kts
summative/FlutterApp/ios/Runner/: Info.plist
summative/FlutterApp/ios/Runner.xcodeproj/: project.pbxproj
summative/FlutterApp/lib/: main.dart
summative/FlutterApp/linux/runner/: my_application.cc
summative/FlutterApp/macos/Runner.xcodeproj/: project.pbxproj
summative/FlutterApp/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
summative/FlutterApp/macos/Runner/Configs/: AppInfo.xcconfig
summative/FlutterApp/test/: widget_test.dart
summative/FlutterApp/web/: index.html
summative/FlutterApp/windows/runner/: Runner.rc
summative/linear_regression/: features.pkl  multivariate.ipynb  predict.py  scaler.pkl
