[project]
name = "student-performance-prediction"
version = "1.0.0"
description = "Linear regression model and API predicting student final grades from socioeconomic and information-access factors"
readme = "../README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.139.2",
    "uvicorn[standard]==0.51.0",
    "pydantic==2.13.4",
    "python-multipart==0.0.32",
    "scikit-learn==1.8.0",
    "pandas==3.0.2",
    "numpy==2.4.4",
    "joblib==1.5.3",
]

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
    "ipykernel>=6.29.5",
    "matplotlib>=3.9.0",
    "seaborn>=0.13.2",
    "requests>=2.32.0",
]

[tool.uv]
package = false
